Tirado a lista de livros alugados do controller de livros e colocado no controller de alugueis

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -39,7 +39,7 @@
 					    <span class="sr-only">Toggle Dropdown</span>
 					  </button>
 					  <ul class="dropdown-menu">					 
-					    <li><%= link_to "Detalhes", lista_aluguel_livro_path(livro) %></li>
+					    <li><%= link_to "Detalhes", livro_alugueis_path(livro) %></li>
 					  </ul>
 					</div>
 				</td>
