adicionada validação para que usuários só possam alugar um livro por vez e lista de usuários para o administrador

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,11 +8,20 @@
 				<th>Qtde Total</th>
 				<th>Qtde Disponível</th>
 				<th>
-					<% if current_user.admin? %>
-						<%= link_to "Cadastrar", new_livro_path, class: "btn btn-primary" %>				
-					<% else %>
+					<div class="btn-group">
+						<% if current_user.admin? %>
+							<%= link_to "Cadastrar", new_livro_path, class: "btn btn-primary" %>							  		
+						  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						    <span class="caret"></span>
+						    <span class="sr-only">Toggle Dropdown</span>
+						  </button>
+						  <ul class="dropdown-menu">
+						    <li><%= link_to "Usuarios", users_path %></li>  
+						  </ul>
+					</div>
+						<% else %>
 					 	Ação
-					<% end %>		
+						<% end %>		
 				</th>
 			</tr>
 		</thead>
@@ -25,10 +34,14 @@
 				<td><%= livro.quantidade_disponivel %></td>
 				<td>
 					<div class="btn-group">
-						<% if livro.alugueis.exists?(user: current_user, alugado: true) %>
-							<%= link_to "Devolver", devolve_livro_path(livro), class: "btn btn-primary", data: {confirm: 'Gostaria de devolver esse livro?'} %>
+						<% if livro.alugado_por?(current_user) %>
+							<%= link_to "Devolver", livro_alugueis_path(livro), method: :delete, class: "btn btn-primary", data: {confirm: 'Gostaria de devolver esse livro?'} %>
 						<% else %>
-					  		<%= link_to "Alugar", aluga_livro_path(livro), class: "btn btn-primary", data: {confirm: 'Gostaria de alugar esse livro?', disable_with: "Alugando"} %>				  		
+							<% if current_user.possui_alugueis_ativos? %>
+								<%= link_to "Alugar", '#', disabled: true, class: "btn btn-primary" %>
+							<% else %>
+								<%= link_to "Alugar", livro_alugueis_path(livro), method: :post, class: "btn btn-primary", data: {confirm: 'Gostaria de alugar esse livro?', disable_with: "Alugando" } %>
+							<% end %>
 					  	<% end %>
 					  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    <span class="caret"></span>
